# voting

./: README.md  pyproject.toml
examples/: proportional_approval_voting_example.py
src/axvoting/cardinal/approval/: proportional.py
