[project]
name = "axvoting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Arseniy Poroshin", email = "login@axxeny.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203", "D213",  # Contradict D211, D212
    "FIX002",  # Line contains TODO, consider resolving the issue
]
